// Bolt Development
// SENG302 Team 300

plugins {
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'jacoco'
    id "org.sonarqube" version "3.3"
}

group = 'nz.ac.canterbury.seng302'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

wrapper {
    gradleVersion = '7.4'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework:spring-web'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2:1.4.200'

    implementation 'nz.ac.canterbury.seng302:shared:1.0' // Local package containing .proto files

    implementation 'net.devh:grpc-spring-boot-starter:2.13.1.RELEASE' // GRPC server / client dependencies
    
    // JWT dependencies
    implementation 'io.jsonwebtoken:jjwt-api:0.11.0'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.0'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.0'

    implementation 'nz.ac.canterbury.seng302:shared:1.0' // Local package containing .proto files
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.grpc:grpc-testing:1.45.0'
    testImplementation "io.cucumber:cucumber-java:6.10.4"
    testImplementation "io.cucumber:cucumber-junit:6.10.4"

}

test {
    finalizedBy jacocoTestReport
}

// Jacoco test coverage configuration
jacoco {
    toolVersion = "0.8.7"
}

// select what reports Jacoco generates and where to put them
jacocoTestReport {
    reports {
        xml.enabled true
        xml.destination file("${buildDir}/jacoco/test-report.xml")
        csv.enabled false
        html.destination file("${buildDir}/jacoco/html")
    }
}

// Sonarqube specific configuration (task)
sonarqube {
    properties {
        property "sonar.projectKey", "team-300-identityprovider"
        property "sonar.projectName", "team 300 - identityprovider"
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.host.url", "http://sonarqube.csse.canterbury.ac.nz"
        property "sonar.login", "${SONARQUBE}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
